--- a/client/views/posts/post_item.html
+++ b/client/views/posts/post_item.html
@@ -3,6 +3,6 @@
 		<div class="post-content">
 			<h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>
 		</div>
-		<a href="{{pathFor 'postPage'}}" class="btn discuss">Discuss</a>
+		<a href="{{pathFor 'postPage'}}" class="btn btn-info discuss">Discuss</a>
 	</div>
 </template>
