--- a/client/views/includes/header.html
+++ b/client/views/includes/header.html
@@ -1,18 +1,15 @@
 <template name="header">
-	<nav style="margin-top:50px;" class="navbar  navbar-default" role="navigation">
+	<nav style="margin-top:20px" class="navbar  navbar-default" role="navigation">
 		<div class="container-fluid">
 		    <div class="navbar-header">	
-		        <button type="button" class="navbar-toggle collapsed" data-togle="collapse" data-target="#navigation">
-		        	<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-		        </button>
 				<a class="navbar-brand" href="{{pathFor 'postsList'}}">Parapsihopatologija</a>
 		    </div>
-			<div  style="margin-right:100px;" class="collapse navbar-collapse" id="navigaton">
-				<ul class="nav navbar-nav navbar-right">
-					{{> loginButtons}}
+			<div>
+				<ul class="nav navbar-nav">
+					<li><a href="{{pathFor 'postSubmit'}}">New</a></li>
+				</ul>
+				<ul style="margin-right:50px; color:#00ff00;" class="nav navbar-nav navbar-right">
+					<li style="margin-right:50px; color:#ff0000;">{{> loginButtons}}</li>
 				</ul>
 			</div>
 		</div>
